# niri-state

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.scratch/: REPO_RULES.md
.scratch/projects/00-niri-state-brainstorming/: DEPENDENCY_MISALIGNMENT.md  DOC_MISALIGNMENT.md  NIRI_STATE_CONCEPT.md  NIRI_STATE_IMPLEMENTATION_GUIDE_DETAIL.md  NIRI_STATE_IMPLEMENTATION_GUIDE_OVERVIEW.md  NIRI_STATE_SPEC.md
.scratch/projects/01-final-planning-docs/: ASSUMPTIONS.md  CONCEPT.md  CONCEPT_RETHINK.md  CONTEXT.md  DECISIONS.md  FINAL_CONCEPT_ANALYSIS.md  PLAN.md  PROGRESS.md  SPEC.md
.scratch/projects/02-final-concept/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  FINAL_CONCEPT.md  FINAL_IMPLEMENTATION_GUIDE.md  FINAL_SPEC.md  PLAN.md  PROGRESS.md
.scratch/projects/03-implementation-review/: IMPLEMENTATION_REVIEW.md  REVIEW_NOTES.md
.scratch/projects/04-final-implementation-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  FINAL_IMPLEMENTATION_REVIEW.md  PLAN.md  PROGRESS.md
.scratch/projects/05-deep-research-analysis-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  Niri-PyPC_Niri-State_Deep-Research-Report.md  PLAN.md  PROGRESS.md
.scratch/projects/06-niri-state-pydantic-v2-refactor/: ASSUMPTIONS.md  CONTEXT.md  NIRI-STATE_GROUND_UP_REFACTOR.md  NIRI-STATE_REFACTOR_GUIDE.md  NIRI_STATE_REFACTORING_OVERVIEW.md  PLAN.md  PROGRESS.md  REFINED_V2_REWRITE_CODE_SKELETON.md  Refined_Rewrite_Patch_Updates.md  V2_REWRITE_CODE_SKELETON.md
.scratch/projects/07-niri-state-v2-rewrite/: CONTEXT.md  PROGRESS.md  REFINED_V2_REWRITE_CODE_SKELETON.md
.scratch/projects/08-v2-refactor/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  Deep Review of niri-state and niri-pypc.md  ISSUES.md  PLAN.md  PROGRESS.md  REMAINING_REFACTORING_WORK.md
.scratch/projects/09-organization-refactor/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  ORGANIZATION_REFACTOR.md  PLAN.md  PROGRESS.md  SHIMS_TO_REMOVE.md
.scratch/projects/10-v2-refactor-code-review/: STATUS_SUMMARY.md  V2_REFACTOR_CODE_REVIEW.md  V2_REFACTOR_REFACTOR_GUIDE.md
.scratch/projects/11-niri-state-cli/: ASSUMPTIONS.md  CLI_DETAIL_UPDATE.md  CONTEXT.md  DECISIONS.md  NIRI_STATE_CLI_PLAN.md  PLAN.md  PROGRESS.md
.scratch/projects/12-event-batching/: EVENT_BATCHING_PLAN.md
.scratch/skills/python-linting-ruff/: SKILL.md
.scratch/skills/python-typecheck-ty/: SKILL.md
src/niri_state/: __init__.py  bootstrap.py  broadcaster.py  changes.py  cli.py  config.py  diagnostics.py  engine_state.py  errors.py  health.py  invariants.py  logging.py  protocol.py  reconcile.py  reducers.py  resync.py  snapshot.py  store.py  waiters.py
src/niri_state/_core/: invariants.py  snapshot_builder.py
tests/: _typing_helpers.py  conftest.py  test_config.py  test_errors.py
tests/core/: test_invariants.py  test_snapshot_builder.py
tests/factories/: __init__.py  bundle.py  events.py  protocol.py  raw_frames.py
tests/integration/: test_bootstrap.py  test_bootstrap_convergence.py  test_close_lifecycle.py  test_desync_and_auto_resync.py  test_refresh.py  test_replay.py  test_runtime_mutation_loop.py  test_store_regressions.py
tests/replay/: test_replay_traces.py
tests/runtime/: test_bootstrap.py  test_broadcaster.py  test_resync.py  test_store.py  test_waiters.py
tests/selectors/: test_focus.py  test_keyboard.py  test_outputs.py  test_overview.py  test_windows.py  test_workspaces.py
tests/unit/: test_architecture.py  test_broadcaster.py  test_cli.py  test_config.py  test_diagnostics.py  test_health.py  test_invariants.py  test_logging.py  test_package_metadata.py  test_reconcile.py  test_reducers.py  test_resync.py  test_selectors.py  test_snapshot.py  test_waiters.py
(+57 files in other folders)
