[project]
name = "niri-state"
version = "0.1.0"
description = "State modeling and selector helpers for the Niri compositor."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "niri-state maintainers" },
]

dependencies = [
  "pydantic>=2.12.5",
  "niri-pypc",
]

[tool.uv.sources]
niri-pypc = { path = ".context/niri-pypc", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "ruff>=0.5.0",
]

#[project.urls]
#homepage = "https://github.com/<owner>/niri-state"
#repository = "https://github.com/<owner>/niri-state.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/niri_state)
packages = ["src/niri_state"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=niri_state --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
packages = ["src/niri_state"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
